@@ -207,6 +207,24 @@ int ast_ari_validate_config_info(struct ast_json *json);
 ari_validator ast_ari_validate_config_info_fn(void);
 
 /*!
+ * \brief Validator for Module.
+ *
+ * Details of an Asterisk module
+ *
+ * \param json JSON object to validate.
+ * \returns True (non-zero) if valid.
+ * \returns False (zero) if invalid.
+ */
+int ast_ari_validate_module(struct ast_json *json);
+
+/*!
+ * \brief Function pointer to ast_ari_validate_module().
+ *
+ * See \ref ast_ari_model_validators.h for more details.
+ */
+ari_validator ast_ari_validate_module_fn(void);
+
+/*!
  * \brief Validator for SetId.
  *
  * Effective user/group id
@@ -1244,6 +1262,12 @@ ari_validator ast_ari_validate_application_fn(void);
  * - max_open_files: int
  * - name: string (required)
  * - setid: SetId (required)
+ * Module
+ * - description: string (required)
+ * - name: string (required)
+ * - status: string (required)
+ * - support_level: string (required)
+ * - use_count: int (required)
  * SetId
  * - group: string (required)
  * - user: string (required)
